# tomatos

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  batching.py  configuration.py  histograms.py  main.py  neos_requirements.txt  nn_architecture.py  optimization.py  pipeline.py  preprocess.py  pyproject.toml  workspace.py
atos/: batching.py  configuration.py  main.py  nn_setup.py  optimization.py  pipeline.py  plotting.py  preprocess.py  utils.py  workspace.py
configs/: demo.yaml  demo_cls_nn.yaml  demo_cls_var.yaml
docs/: Configuration.rst  Plotting.rst  Preprocessing.rst  Training.rst  conf.py  index.rst
docs/_build/doctrees/: Plotting.doctree  Preprocessing.doctree  Training.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  Plotting.html  Preprocessing.html  Training.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: Preprocessing.rst  Preprocessing.rst.txt  Training.rst  index.rst.txt
hh_neos/: batching.py  configuration.py  histograms.py  main.py  neos_dev.ipynb  nn_architecture.py  optimization.py  pipeline.py  plotting.py  preprocess.py  utils.py  workspace.py
hh_neos/neos_env/: pyvenv.cfg
tests/: generate_test_files.ipynb  generate_test_files.py
tests/files/: bkg.root  bkg_NOSYS.root  generate.ipynb  ggZH125_vvbb_NOSYS.root
tests/files/bkg/: NOSYS.root
tests/files/ggZH125_vvbb/: JET_PT_1DOWN.root  JET_PT_1UP.root  NOSYS.root
tomatos/: __init__.py  batcher.py  batching.py  bkg_shape_up_down.ipynb  cli.py  compare_losses.py  compare_plots.ipynb  config.py  configuration.py  constraints.py  giffer.py  histograms.py  initialize.py  input_plots.ipynb  main.py  nn.py  nn_builder.py  nn_setup.py  optimization.py  optimizer.py  pipeline.py  plotting.py  preprocess.py  select.py  solver.py  train_utils.py  training.py  utils.py  workspace.py
