[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tomatos"
version = "0.1"
requires-python = ">=3.9"
dependencies = [
    "sklearn",
    "scikit-learn==1.1.1",
    "chex==0.1.3",
    "jax==0.3.14",
    "jaxlib @ https://storage.googleapis.com/jax-releases/nocuda/jaxlib-0.3.14-cp39-none-manylinux2014_x86_64.whl",
    # cuda
    # "jaxlib @ https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.3.14+cuda11.cudnn82-cp39-none-manylinux2014_x86_64.whl",
    # "scipy==1.9.2",
    # 
    "optax==0.1.2",
    "plothelp==0.1",
    "equinox==0.5.5",
    "pyhf @ git+https://github.com/fred-renner/pyhf.git@fix_jax",
    "relaxed @ git+https://github.com/fred-renner/relaxed.git@mle_fix",
    "neos==0.3.0",
    "jupyter",
    "h5py",
]

[tool.setuptools.packages]
find = {} # Scan the project directory with the default parameters

[project.scripts]
tomatos = "tomatos.main:run"
tomatos-plot = "tomatos.main:plot"
